[project]
name = "tuya-device-handlers"
version = "0.0.18"
description = "Tuya quirks library"
authors = [{ name = "epenet" }]
license = "MIT"
requires-python = ">=3.12"
readme = "README.md"
keywords = ["tuya"]
classifiers = [
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Home Automation",
]
dynamic = ["dependencies"]
dependencies = ['tuya-device-sharing-sdk (>=0.2.8)']

[tool.poetry]
requires-poetry = '>=2.0'

[project.urls]
homepage = "https://github.com/home-assistant-libs/tuya-device-handlers"
repository = "https://github.com/home-assistant-libs/tuya-device-handlers"
documentation = "https://tuya-device-handlers.readthedocs.io"
Changelog = "https://github.com/home-assistant-libs/tuya-device-handlers/releases"

[tool.poetry.group.dev.dependencies]
Pygments = "2.20.0"
ruff = "0.15.9"
coverage = { version = "7.13.5", extras = ["toml"] }
darglint = { version = "1.8.1", python = "<4.0" }
mypy = "1.20.0"
pre-commit = "4.5.1"
pre-commit-hooks = "6.0.0"
pytest = "9.0.3"
pytest-asyncio = "1.3.0"
pytest-cov = "7.1.0"
safety = "3.7.0"
syrupy = "5.1.0"
typeguard = "4.5.1"

# docs (Python >= 3.14)
furo = { version = "2025.12.19", python = ">=3.14" }
myst-parser = { version = "5.0.0", python = ">=3.14" }
sphinx = { version = "9.1.0", python = ">=3.14" }
sphinx-autobuild = { version = "2025.8.25", python = ">=3.14" }
sphinx-click = { version = "6.2.0", python = ">=3.14" }

[tool.coverage.paths]
source = ["src", "*/site-packages"]
tests = ["tests", "*/tests"]

[tool.coverage.run]
branch = true
source = ["tuya_device_handlers"]

[tool.coverage.report]
show_missing = true
exclude_lines = [
  # Don't complain if tests don't hit defensive assertion code:
  "raise NotImplementedError",
  # TYPE_CHECKING blocks are never executed during pytest run
  "if TYPE_CHECKING:",
]

[tool.mypy]
strict = true
warn_unreachable = true
pretty = true
show_column_numbers = true
show_error_codes = true
show_error_context = true

[[tool.mypy.overrides]]
module = 'tuya_sharing.*'
ignore_missing_imports = true

[tool.ruff]
line-length = 80
target-version = "py313"

[tool.ruff.lint]
ignore = [
    "A001",    # Variable is shadowing a Python builtin
    "A002",    # Argument is shadowing a Python builtin
    "C400",    # Unnecessary generator
    "E501",    # Line too long (81 > 80)
    "ERA001",  # Found commented-out code
    "N815",    # Variable in class scope should not be mixedCase
    "PLR2004", # Magic value used in comparison, consider replacing
    "PLR0911", # Too many return statements
    "PLR0913", # Too many arguments in function definition
    "PT001",   # Use `@pytest.fixture()` over `@pytest.fixture`
    "PT018",   # Assertion should be broken down into multiple parts
    "PT022",   # No teardown in fixture `cli_runner`, use `return` instead of `yield`
    "PT023",   # Use `@pytest.mark.asyncio()` over `@pytest.mark.asyncio`
    "PLW0127", # Self-assignment of variable
]
select = [
    "A", #flake8-builtins
    "B", #flake8-bugbear
    "C4", #flake8-comprehensions
    "C90", #mccabe
    "E", #pycodestyle error
    "ERA", #eradicate
    "F", #Pyflakes
    "I", #isort
    "N", #pep8-naming
    "PL", #Pylint
    "PT", #flake8-pytest-style
    "UP", #pyupgrade
]

[tool.ruff.lint.isort]
force-sort-within-sections = true
known-first-party = ["tuya_device_handlers"]
combine-as-imports = true
split-on-trailing-comma = false

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.ruff.lint.pydocstyle]
convention = "google"

[build-system]
requires = ["poetry-core>=2.0"]
build-backend = "poetry.core.masonry.api"
