[project]
name = "tuya-device-handlers"
version = "0.0.19"
description = "Tuya quirks library"
authors = [{ name = "epenet" }]
license = "MIT"
requires-python = ">=3.12"
readme = "README.md"
keywords = ["tuya"]
classifiers = [
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Home Automation",
]
dynamic = ["dependencies"]
dependencies = ['tuya-device-sharing-sdk (>=0.2.8)']

[tool.poetry]
requires-poetry = '>=2.0'

[project.urls]
homepage = "https://github.com/home-assistant-libs/tuya-device-handlers"
repository = "https://github.com/home-assistant-libs/tuya-device-handlers"
documentation = "https://github.com/home-assistant-libs/tuya-device-handlers"
Changelog = "https://github.com/home-assistant-libs/tuya-device-handlers/releases"

[tool.poetry.group.dev.dependencies]
codespell = "2.4.2"
covdefaults = "2.3.0"
coverage = { version = "7.13.5", extras = ["toml"] }
pre-commit-hooks = "6.0.0"
prek = "0.3.11"
pylint = "4.0.5"
pytest = "9.0.3"
pytest-asyncio = "1.3.0"
pytest-cov = "7.1.0"
ruff = "0.15.9"
safety = "3.7.0"
syrupy = "5.1.0"
ty = "0.0.32"
yamllint = "1.38.0"
zizmor = "1.24.1"


[tool.coverage.run]
plugins = ["covdefaults"]
source = ["tuya_device_handlers"]

[tool.coverage.report]
show_missing = true
fail_under = 90

[tool.ty.environment]
python-version = "3.13"

[tool.codespell]
skip = "node_modules,poetry.lock"

[tool.pylint.MASTER]
ignore = ["tests"]

[tool.pylint.BASIC]
good-names = ["_", "ex", "fp", "i", "id", "j", "k", "on", "Run", "T"]

[tool.pylint.DESIGN]
max-attributes = 15

[tool.pylint."MESSAGES CONTROL"]
disable = [
    "abstract-method",
    "arguments-differ",
    "invalid-name",
    "broad-exception-caught",
    "cyclic-import",
    "duplicate-code",
    "format",
    "import-outside-toplevel",
    "missing-class-docstring",
    "missing-function-docstring",
    "redefined-builtin",
    "too-many-arguments",
    "too-many-boolean-expressions",
    "too-many-positional-arguments",
    "too-many-return-statements",
    "unsubscriptable-object",
    "unused-argument",
]

[tool.pylint.SIMILARITIES]
ignore-imports = true

[tool.pylint.FORMAT]
max-line-length = 80

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.ruff]
line-length = 80
target-version = "py313"

[tool.ruff.lint]
ignore = [
    "A001",    # Variable is shadowing a Python builtin
    "A002",    # Argument is shadowing a Python builtin
    "C400",    # Unnecessary generator
    "E501",    # Line too long (81 > 80)
    "ERA001",  # Found commented-out code
    "N815",    # Variable in class scope should not be mixedCase
    "PLR2004", # Magic value used in comparison, consider replacing
    "PLR0911", # Too many return statements
    "PLR0913", # Too many arguments in function definition
    "PT001",   # Use `@pytest.fixture()` over `@pytest.fixture`
    "PT018",   # Assertion should be broken down into multiple parts
    "PT022",   # No teardown in fixture `cli_runner`, use `return` instead of `yield`
    "PT023",   # Use `@pytest.mark.asyncio()` over `@pytest.mark.asyncio`
    "PLW0127", # Self-assignment of variable
]
select = [
    "A", #flake8-builtins
    "B", #flake8-bugbear
    "C4", #flake8-comprehensions
    "C90", #mccabe
    "E", #pycodestyle error
    "ERA", #eradicate
    "F", #Pyflakes
    "I", #isort
    "N", #pep8-naming
    "PL", #Pylint
    "PT", #flake8-pytest-style
    "UP", #pyupgrade
]

[tool.ruff.lint.isort]
force-sort-within-sections = true
known-first-party = ["tuya_device_handlers"]
combine-as-imports = true
split-on-trailing-comma = false

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.ruff.lint.pydocstyle]
convention = "google"

[build-system]
requires = ["poetry-core>=2.0"]
build-backend = "poetry.core.masonry.api"
